--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "dayjs": "^1.11.10",
     "json-server": "^1.0.0-alpha.21",
     "react": "^18.2.0",
+    "react-calendar": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.22.0",
     "react-scripts": "5.0.1",
     "react-transition-group": "^4.4.5",
     "typescript": "^4.9.5",
